<resources>
    <string name="app_name">Spider3</string>
    <string name="textview">TextView</string>

    <string name="help">Help</string>
    <string name="write_your_new_task_and_then_click_the_the_old_task">Write your new task and then click the the old task</string>
    <string name="long_click_on_your_task_to_delete_it">Long click on your task to delete it</string>
    <string name="update">UPDATE:</string>
    <string name="delete">DELETE:</string>

    <string name="return_back">return back</string>
</resources>
