<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"

        android:layout_alignParentTop="true"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="53dp"
        android:text="@string/write_your_new_task_and_then_click_the_the_old_task"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="145dp"
        android:text="@string/long_click_on_your_task_to_delete_it"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="62dp"
        android:text="@string/update"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/update"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="205dp"
        android:text="@string/delete"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="53dp"
        android:background="#3bf702"
        android:text="@string/return_back" />
</RelativeLayout>